<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="dialog_fire_missiles">Hello!</string>
    <string name="fire">Fire</string>
    <string name="cancel">Cancel</string>
    <string name="attribute_value">Attribute value (e.g. 21)</string>
    <string name="attribute_name">Attribute name (e.g. age)</string>
    <string name="peer_address">Peer address and port</string>
    <string name="unsupported_attestation">This attestation appears to be malformed. Please request a reissue from the issuing authority.</string>
    <string name="attestation_qr_code_content_description">Attestation QR Code</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="attest">Attest</string>
    <string name="dismiss">Dismiss</string>
    <string name="allow">Allow</string>
    <string name="deny">Deny</string>
    <string name="verifyRequest">Verify Request for </string>
    <string name="attestationRequest">Attestation Request for </string>
    <string name="select_attribute">Select attribute</string>
    <string name="select_proof_type">Select proof type</string>
    <string name="requested_value">Request value (e.g. 42)</string>
    <string name="select_image">Select Image</string>
    <string name="id_picture">ID Picture</string>
    <string name="settings">Settings</string>
    <string name="rendezvous_token">Rendezvous Token</string>
    <string name="locating_client">Locating client …</string>
    <string name="failed_to_locate_client">Failed to locate client.</string>
    <string name="challenging_client">Challenging Client …</string>
    <string name="credentials">Credentials</string>
    <string name="qr_code">QR Code</string>
    <string name="switch_str">Switch</string>
    <string name="display_first_qr_code">Display first QR code</string>
    <string name="credential_image">Credential image</string>
    <string name="clear_identity">Clear Identity</string>
    <string name="identity_network">Identity Network</string>
</resources>
