<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="10dp">

    <Button
        android:text="@string/select_image"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/select_image_button" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:srcCompat="@tools:sample/avatars"
        android:visibility="gone"
        android:id="@+id/picture_view"
        android:contentDescription="@string/id_picture" />

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/value_input"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/holo_red_dark"
        android:hint="@string/attribute_value"
        android:textCursorDrawable="@null"
        android:inputType="number" />

</LinearLayout>
